--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,4 +3,8 @@ $primary-gray: #232323;
 $light-gray: #989898;
 $disabled-gray: #b6b6b6;
 $red: #c73433;
+$dark-red: #b12726;
 $blue: #1e9dff;
+
+$red-gradient: linear-gradient(to right, #b12726 0%, #ed4b49 100%);
+$red-gradient-reverse: linear-gradient(to right, #ff6463 0%, #e92826 100%);
