add employee efficiency

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,6 +5,9 @@ $disabled-gray: #b6b6b6;
 $red: #c73433;
 $dark-red: #b12726;
 $blue: #1e9dff;
+$green: #79b667;
+$light-green: #e8ffe7;
 
 $red-gradient: linear-gradient(to right, #b12726 0%, #ed4b49 100%);
 $red-gradient-reverse: linear-gradient(to right, #ff6463 0%, #e92826 100%);
+$blue-gradient: linear-gradient(to right, #1e9dff 0%, #75baef 100%);
