--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -11,3 +11,4 @@ $light-green: #e8ffe7;
 $red-gradient: linear-gradient(to right, #b12726 0%, #ed4b49 100%);
 $red-gradient-reverse: linear-gradient(to right, #ff6463 0%, #e92826 100%);
 $blue-gradient: linear-gradient(to right, #1e9dff 0%, #75baef 100%);
+$green-gradient: linear-gradient(45deg, #62a547 0%, #8ac473 100%);
